--- a/src/coms/res-online/views/onlineres.html
+++ b/src/coms/res-online/views/onlineres.html
@@ -1,7 +1,7 @@
 ﻿<div class="container" id="onlineres-container">
 	<div class="header-nav-tips">
 		<span ui-sref="prepare">{{currentTreeNode.label}} <i class="icon-angle-right"></i></span>
-		<span>{{prepare.title}}</span>
+		<span>{{currentPrepare.title}}</span>
 	</div>
 	<div class="col-md-10 slide-container">
 		<div class="slide-content">
