--- a/src/less/customres.less
+++ b/src/less/customres.less
@@ -107,6 +107,7 @@
    vertical-align: middle;
   
 }
+
 #customres-container .item_inner:hover .res-list-thumb
 {
     transform: scale(1.1);
@@ -126,4 +127,8 @@
 }
 #customres-container .res-custom-header-img{
     margin-top: -18px;
+}
+.res-custom-header-subject{
+   margin-top: -20px;
+   margin-left: -40px; 
 }
