--- a/src/less/res.less
+++ b/src/less/res.less
@@ -282,10 +282,10 @@
 }
 .catalog-text{
     position: absolute;
-    left: 50px;
+    left: 80px;
     top: 50px;
     color: #fff;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .res-header-type{
@@ -569,10 +569,10 @@
 .addPrepare-custom{
     width: 105px;
     font-size: 15px;
-    float: left;
+    position: absolute;
+    left: 80px;
     height: 40px;
     margin-top: 5px;
-    position: relative;
     margin-left: 15px !important;
     margin-right: 0;
     font-size: 13px;
@@ -883,6 +883,9 @@
     -moz-transition: 0.5s transform; /* Firefox 4 */
     -webkit-transition: 0.5s transform; /* Safari 和 Chrome */
     -o-transition: 0.5s transform; /* Opera */
+}
+.img-thumb2-list:hover .res-author{
+    display: block;
 }
 .img-thumb-list-res{
     margin-left: 40px;
