--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -190,3 +190,17 @@
 .modal-remove i:hover{
     color: #666;
 }
+// 修正资源
+.edit-res-trigger{
+    line-height: 30px !important;
+    height: 30px !important;
+}
+.edit-res-trigger .select-current{
+    display: inline-block;
+}
+.edit-res-trigger .icon-angle-up, .edit-res-trigger .icon-angle-down{
+    margin-right: 3px !important;
+}
+.edit-res-trigger .select-current-node{
+    min-width: 120px;
+}
