--- a/src/coms/layout/footer/footer.html
+++ b/src/coms/layout/footer/footer.html
@@ -8,7 +8,13 @@
 	<p>京ICP备 10003979</p>
 	
 	<div class="ctrl-tools">
-		<span class="ctrl-item" ui-sref="systemres" title="回到首页"><i class="icon-home"></i></span>
-		<span class="ctrl-item" title="返回顶部" ng-click="goToTop()"><i class="icon-arrow-up"></i></span>
+		<span class="ctrl-item" ui-sref="systemres">
+			<i class="icon-home"></i>
+			<span class="text-tips">返回<br>主页</span>
+		</span>
+		<span class="ctrl-item" ng-click="goToTop()">
+			<i class="icon-arrow-up"></i>
+			<span class="text-tips">返回<br>顶端</span>
+		</span>
 	</div>
 </div>
