--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -28,9 +28,22 @@
     cursor: pointer;
 }
 .ctrl-tools .ctrl-item i{
-    font-size:24px;
+    font-size:32px;
     color: #fff;
 }
 .ctrl-tools .ctrl-item:hover{
-    background: darkgreen;
+    
+   i{
+       display: none;
+   }
+    .text-tips{
+        display: block;
+        
+    }
+}
+.ctrl-tools .text-tips {
+    color: #fff;
+    font-size: 8px;
+    margin-left: 3px;
+    display: none;
 }
