--- a/src/less/header.less
+++ b/src/less/header.less
@@ -22,6 +22,9 @@
     color: @msgColor;
     font-size: @msgFontSize;
 }
+#header .message li a:visited{
+    text-decoration: none;
+}
 
 #header .banner{
     z-index: -1;
