--- a/src/coms/help/views/help.html
+++ b/src/coms/help/views/help.html
@@ -31,124 +31,114 @@
 				</div>
 				<div class="help_content">
 					<p>搜索到合适的资源时，您可以下载资源到本地使用：</p>
-					<p>方式1：选中需要下载的资源后，点击按钮，按提示逐步完成操作即可；</p>
+					<p>方式1：选中需要下载的资源后，点击<span class="icon-in-help icon-download-alt">点击下载</span>按钮，按提示逐步完成操作即可；</p>
 					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
+						<img src="../../../assets/img/image002.png" />
 					</div>
-					<p>方式2：在所需资源浏览页面，点击 按钮，按提示完成下载。</p>
+					<p>方式2：在所需资源预览页面，点击<span class="icon-in-help down-orign">下载到本地</span>按钮，按提示完成下载。</p>
+					<div class="img_box">
+						<img src="../../../assets/img/image003.png" />
+					</div>
 				</div>
 
 			</li>
 			<li>
 				<div class="help_title">
-					<i class="circle"></i><span>3.如何收藏保存平台资源</span>
+					<i class="circle"></i><span>3.如何为资源打分、评价</span>
 				</div>
 				<div class="help_content">
-					<p>平台资源包括：基础资源、共享资源、校本资源、区本资源，搜索到有价值的资源后，您可以“收藏”此资源：</p>
-					<p>方式1：在资源列表中，选中想要收藏的资源，点击 按钮，按步骤设置资源收藏的类型、教学目录即可。</p>
-					
-					<p>方式2：勾选想要收藏的资源后（可多选），点击列表下方的 收藏按钮，实现批量收藏。</p>
-					<p>方式3：在所需资源浏览页面，点击收藏 按钮，按提示完成收藏。</p>
-					<p>收藏完成后，您可以在“我的资源——我的收藏”页面内找到所有收藏的资源。</p>
+					<p>评分：在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
+					<p>评论：在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
+					<div class="img_box">
+						<img src="../../../assets/img/image004.png" />
+					</div>
+				</div>
+			</li>
+			<li>
+				<div class="help_title">
+					<i class="circle"></i><span>4.如何新建备课夹</span>
+				</div>
+				<div class="help_content">
+					<p>方式一：浏览资源时自动新建备课夹。</p>
+					<p>点击<span class="icon-in-help res-select">加入备课夹<i class="icon-in-help icon-sort-down"></i></span>按钮。如果该节点下无备课夹，则自动新建并加入备课夹，备课夹名称默认为当前节点名称。</p>
+					<p>方式二：浏览资源时手动新建备课夹</p>
+					<p>点击右侧下拉按钮<span class="icon-in-help res-select">加入备课夹<i class="icon-in-help icon-sort-down icon-sort-down-mark"></i></span>，下拉单中可选择最近使用的三个备课夹，点击“更多备课夹…”，从弹出的备课夹选择窗口中进行新建。</p>
+					<div class="img_box">
+						<img src="../../../assets/img/image005.png" />
+					</div>
+					<p>方式三：在备课夹页点击按钮新建备课夹</p>
+					<p>进入备课夹页面，点击右上角<span class="icon-in-help res-select create-prepare">新建备课夹</span>按钮，按照提示进行新建。</p>
 				</div>
 
 			</li>
 			<li>
 				<div class="help_title">
-					<i class="circle"></i><span>4.如何为资源打分、评价</span>
+					<i class="circle"></i><span>5.如何将资源加入备课夹</span>
 				</div>
 				<div class="help_content">
-					<p>在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
-					<p>在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
+					<p>方式一：在检索页直接将资源加入备课夹</p>
+					<p>步骤1：检索资源，对合适的资源，点击<span class="icon-in-help res-select">加入备课夹<i class="icon-in-help icon-sort-down"></i></span>按钮。即可自动新建并加入到以节点为名称的备课夹中。</p>
+					<p>步骤2：点击右侧下拉按钮，下拉单中可选择最近使用的三个备课夹，点击“更多备课夹…”，弹出选择框，按照节点，精确选择备课夹。</p>
 					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
+						<img src="../../../assets/img/image006.png" />
 					</div>
-					
+					<p>方式二：在预览页将资源加入备课夹</p>
+					<p>步骤1：点开一条资源预览，预览页下方点击<span class="icon-in-help down-orign-red">加入备课夹</span>按钮。</p>
+					<p>步骤2：从最近备课夹的菜单，选择目录，加入指定备课夹。</p>
+					<p>方法三：备课夹中，上传本地资源</p>
+					<p>可在备课夹中，点击<span class="icon-in-help add-local-res">本地资源</span>按钮，按照提示上传自己本地的资源</p>
 				</div>
 
 			</li>
 			<li>
 				<div class="help_title">
-					<i class="circle"></i><span>5.如何上传本地资源</span>
+					<i class="circle"></i><span>6.如何上传本地资源</span>
 				</div>
 				<div class="help_content">
-					<p>在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
-					<p>在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
+					<p>方式一：在“个人中心”页面，可以上传添加本地资源。</p>
+					<p>步骤1：点击<span class="icon-in-help upload-res-pink">上传资源</span>按钮，按照提示即可选择本地文件。 </p>
+					<p>步骤2：设置资源属性。上传完成后，在“资源属性设置”页面中完成属性设置即可，其中有“*”标识的属性为必填项。</p>
 					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
+						<img src="../../../assets/img/image007.png" />
 					</div>
-					
+					<p>方式二：在“备课夹”页面，添加本地资源。</p>
+					<p>也可以在备课夹中，点击<span class="icon-in-help upload-local-res"><i class="icon-plus-sign"></i>本地资源</span>按钮，上传本地的资源及信息的编辑。</p>
+					<div class="img_box">
+						<img src="../../../assets/img/image008.png" />
+					</div>
 				</div>
 			</li>
 			<li>
 				<div class="help_title">
-					<i class="circle"></i><span>6.如何添加网络资源</span>
+					<i class="circle"></i><span>7.如何添加网络资源</span>
 				</div>
 				<div class="help_content">
-					<p>在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
-					<p>在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
-					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
-					</div>
-					
+					<p>同添加本地资源一样，点击上传按钮或添加本地资源按钮，选择添加网络资源，按照提示完成网络资源的上传，上传完成后以网页形式保存。</p>
+				</div>
+			</li>
+			<li>
+				<div class="help_title">
+					<i class="circle"></i><span>8.如何查看和管理“个人资源“</span>
+				</div>
+				<div class="help_content">
+					<p>在“个人中心”页面内，您可以查看自己在平台上备课的统计，还可以查看和管理“个人资源”。</p>
+					<p>（1）查看“个人资源”</p>
+					<p>可以查看自己在平台上引用、上传、下载、浏览、评价的资源。支持按照类型筛选和预览。</p>
+					<p>（2）管理“个人资源”</p>
+					<p>对自己上传的资源，用户可以进行编辑。</p>
 				</div>
 
 			</li>
 			<li>
 				<div class="help_title">
-					<i class="circle"></i><span>7.如何管理“我的资源”</span>
+					<i class="circle"></i><span>9.怎么让其他老师看到我的资源</span>
 				</div>
 				<div class="help_content">
-					<p>在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
-					<p>在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
 					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
+						<img src="../../../assets/img/image009.png" />
 					</div>
-					
+					<p>在上传一条资源时，可以将共享范围的设置为“本校可见”/“本区可见”，其他用户就可以在校/区本资源中查看和使用该资源了。</p>
 				</div>
-
-			</li>
-			<li>
-				<div class="help_title">
-					<i class="circle"></i><span>8.怎么让其他老师看到我的资源</span>
-				</div>
-				<div class="help_content">
-					<p>在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
-					<p>在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
-					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
-					</div>
-					
-				</div>
-
-			</li>
-			<li>
-				<div class="help_title">
-					<i class="circle"></i><span>9.怎么参与建设校本/区本资源库</span>
-				</div>
-				<div class="help_content">
-					<p>在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
-					<p>在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
-					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
-					</div>
-					
-				</div>
-
-			</li>
-			<li>
-				<div class="help_title">
-					<i class="circle"></i><span>10.如何更改资源邀请答复设置</span>
-				</div>
-				<div class="help_content">
-					<p>在资源浏览页面，点击星星，即可为当前资源打分，最高为5分。</p>
-					<p>在输入框中输入评论内容后，点击右下角的“发表”，即可完成对该资源的评论。</p>
-					<div class="img_box">
-						<img src="../../../assets/img/image001.png" />
-					</div>
-					
-				</div>
-
 			</li>
 		</ul>
 		<div class="service_list" ng-hide="VM.nav">
