--- a/src/less/help.less
+++ b/src/less/help.less
@@ -100,8 +100,73 @@
 #help-container .help_content p{
     text-indent: 32px;
     line-height: 30px;
-margin:0px;
+    margin:0px;
+    
+    .icon-in-help {
+        text-indent: 0;
+        margin: 0 5px;
+        display: inline-block;
+        height: auto;
+        width: auto;
+    }
+    
+    .icon-download-alt {
+        color: #219B81;
+        font-weight: bold;
+        margin: 0 5px;
+    }
+    
+    .down-orign {
+        color: #FFFFFF;
+        padding: 5px 5px;
+        background-color: rgba(10, 10, 10, 0.7);
+    }
+    
+    .down-orign-red {
+        color: #FFFFFF;
+        padding: 5px 5px;
+        background-color: #d9534f;
+    }
+    
+    .add-local-res {
+        background-color: #219B81;
+        color: #FFFFFF;
+        padding: 5px 5px;
+    }
+    
+    .res-select {
+        padding-right: 10px;
+    }
+    
+    .create-prepare {
+        background-color: #41C9A9;
+        padding: 10px 15px;
+    }
+    
+    .icon-sort-down {
+        margin-left: 10px;
+    }
+    
+    .icon-sort-down-mark {
+        padding: 2px 5px;
+        border: 2px solid #FF0000;
+    }
+    
+    .upload-res-pink {
+        background-color: #EC80AF;
+        padding: 10px 10px;
+        color: #FFFFFF;
+        border-radius: 5px;
+    }
+    
+    .upload-local-res {
+        color: #3FBBCF;
+        padding: 10px 10px;
+    }
+       
 }
+
+
 #help-container .img_box 
 {
    width: 77%;
