--- a/src/coms/layout/modal/modal/upload-modal.html
+++ b/src/coms/layout/modal/modal/upload-modal.html
@@ -102,7 +102,7 @@
 <!-- 上传资源信息编辑 -->
 <script type="text/ng-template" id="eiditResModal.html">
 	<div class="modal-body modal-prepare-body upload-modal-body">
-		<div class="modal-prepare-header">上传资源</div>
+		<div class="modal-prepare-header">编辑资源</div>
 		<div class="edit-upload-res">
 			<div class="row" ng-show="showHeader">
 				<div class="col-sm-2">资源列表：</div>
