--- a/src/coms/prepare/views/prepare-content-list.html
+++ b/src/coms/prepare/views/prepare-content-list.html
@@ -64,7 +64,7 @@
 	<div class="prepare-all-list" ng-hide="showSearchResults || moreEarlyPrepare.list.length == 0">
 		<div class="prepare-all-header">
 			<img class="prepare-all-header-img" src="assets/img/prepare/prepare-list.png" />
-			<span>更早{{moreEarlyPrepare.totalLines}}</span>
+			<span>更早({{moreEarlyPrepare.totalLines}})</span>
 		</div>
 		<div class="prepare-gallery" >
 			<div class="list-box row">
