--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -561,7 +561,15 @@
 .prepare-coms-pagination{
     display: block;
     text-align: center;
-    width: 500px;
+    width: 420px;
     margin: 15px auto;
     padding-left: 0;
+}
+.prepare-list-pagination{
+    display: block;
+    height: 60px;
+    text-align: center;
+    margin: 35px auto;
+    padding-left: 0;
+    width: 420px;
 }
