--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -576,3 +576,10 @@
 }
 
 
+#personal-center-container .menu-drop-main .menu-drop-list > li{
+    clear: both;
+}
+#personal-center-container .type-select-box .menu-drop .trigger i{
+    float: right;
+    margin-left: 15px;
+}
