--- a/src/coms/layout/header/header.html
+++ b/src/coms/layout/header/header.html
@@ -4,6 +4,7 @@
 		<img ui-sref="systemres" class="logo" src="assets/img/logo.png" />
 		<ul class="message">
 			<li><a ui-sref="settings" target="_blank"><i class="icon-user"></i> {{ userTrueName }},欢迎您</a></li>
+			<li><a href="modules/client-download/index.html" target="_blank">下载客户端</a></li>
 			<li><a ui-sref="message" target="_blank">消息</a></li>
 			<li><a ui-sref="help" target="_blank">帮助中心</a></li>
 			<li><a ng-click="logout()">退出</a></li>
