--- a/src/coms/res-online/views/onlineres.html
+++ b/src/coms/res-online/views/onlineres.html
@@ -39,4 +39,10 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="clearfix"></div>
+	<div class="banner-footer banner-footer-preview">
+		<div class="banner-footer-header"></div>
+		<div class="banner-footer-footer"></div>
+	</div>
 </div>
