--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -2,6 +2,7 @@
 @slideBgColor: #5D5D5D;
 .slide-container{
     margin-top: 15px;
+    background: #5D5D5D;
 }
 .slide-container .slide-content{
     position: relative;
@@ -53,13 +54,13 @@
     margin-top: 6px;
     text-align: center;
     padding: 6px 10px;
-    font-size: 20px;
+    font-size: 16px;
     border-radius: 50px;
     cursor: pointer;
-    color: #333;
+    color: #fff;
 }
 .slide-fullscreen:hover{
-    color: #666;
+    color: #ddd;
 }
 .slide-container .slide-tools{
     position: relative;
