fix upload isweb

--- a/src/less/res.less
+++ b/src/less/res.less
@@ -35,6 +35,7 @@
 .menu-drop .select-current{
     height: 20px;
     color: #4D4D4D;
+    display: inline-block;
 }
 .menu-drop .trigger i{
     background: @color1;
