fix resonline css

--- a/src/less/slide.less
+++ b/src/less/slide.less
@@ -6,7 +6,8 @@
 }
 .slide-container .slide-content{
     position: relative;
-    height: 700px;
+    height: 705px;
+    padding-top: 8px;
 }
 .slide-container .slide-arrow{
     position: absolute;
