--- a/src/coms/prepare/views/prepare-content.html
+++ b/src/coms/prepare/views/prepare-content.html
@@ -34,8 +34,8 @@
 						<span class="item-info-type">类型: {{item.unifyType}}</span><br>
 						<res-size data-value="{{item.size}}"></res-size>
 					</div>
-					<div class="prepare-download" ng-show="item.active">
-						<img class="op-img" src="assets/img/prepare/download_icon.png" ng-click="resDownloadByResId(item.resId, item.fromFlag)">
+					<div class="prepare-download" ng-hide='item.unifyType=="多媒体教辅" || item.unifyType=="综合案例" || item.fileSuffix=="html"'>
+						<img ng-show="item.active"  class="op-img" src="assets/img/prepare/download_icon.png" ng-click="resDownloadByResId(item.resId, item.fromFlag)">
 					</div>
 					<div class="sp-edit" ng-show="item.active">
 						<img class="op-img" src="assets/img/prepare/edit_icon.png" default-src="assets/img/prepare/edit_icon.png" active-src="assets/img/prepare/edit_icon_active.png"/>
