--- a/src/coms/res-preview/views/comment.html
+++ b/src/coms/res-preview/views/comment.html
@@ -60,7 +60,7 @@
 		<span>浏览次数:{{VM.info.clickTimes}}</span>
 
 		<button class="btn btn-danger" ng-click="addToCurrentPrepare('btn')" ng-mouseover="showPre()" ng-mouseout="hidePre()" ng-disabled="VM.prepareShow">加入备课夹</button>
-		<span class="down-orign" ng-click="resDownload(VM.resourceId)">下载到本地</span>
+		<span class="down-orign" ng-click="resDownload(VM.resourceId)" ng-hide='VM.info.mtype=="多媒体教辅" || VM.info.mtype=="综合案例" || VM.info.mtype=="索引目录"'>下载到本地</span>
 		<ul class="prepareList" ng-show="VM.showPre" ng-mouseover="showPre()" ng-mouseout="hidePre()">
 			<li ng-repeat="item in prepareList track by $index"  class="text-ellipsis" ng-class="curPre?'curPre':''" ng-click="addToCurrentPrepare('list',item.id)">{{$index+1}}、{{item.title}} <span class="prepare-num">({{item.contentNumber}})</li>
 			<div class="res-prepare-list-item res-prepare-list-more" ng-hide="prepareList.length == 0" ng-click="selectPrepare($event,parentIndex)">更多备课夹...</div>
