--- a/src/coms/layout/views/prepare/prepare-add.html
+++ b/src/coms/layout/views/prepare/prepare-add.html
@@ -5,7 +5,8 @@
 		<span class="shop-count">{{ shopCount }}</span>
 		<div class="prepare-text">备课夹</div>
 	</a>
-	<a class="prepare-ctrls" ui-sref="prepare" target="_blank">
+	<!--<a class="prepare-ctrls" ui-sref="prepare" target="_blank">-->
+	<a class="prepare-ctrls">
 		<div class="ctrls-prepare-list">
 			<div class="ctrls-prepare-list-item text-ellipsis" ng-repeat="item in prepareList track by $index">{{$index+1}}、{{item.title}} <span class="prepare-num">({{item.contentNumber}})</span></div>
 			<!--<div class="ctrls-prepare-list-item text-ellipsis" editable-text="VM.newPrepare">{{ VM.newPrepare}}</div>-->
