--- a/src/less/res.less
+++ b/src/less/res.less
@@ -660,6 +660,7 @@
     border-radius: 3px;
     overflow-y: auto;
     right: 9px;
+    cursor: none;
 }
 @media screen and (max-width: 1400px) { /*当屏幕尺寸小于1400px时，应用下面的CSS样式*/
      .prepare-fixed{
@@ -676,10 +677,10 @@
     font-size: 14px;
     line-height: 28px;
 }
-.prepare-fixed .ctrls-prepare-list-item:hover{
-    color: #219B81;
-    background: #E4F3F7;
-}
+//.prepare-fixed .ctrls-prepare-list-item:hover{
+//  color: #219B81;
+//  background: #E4F3F7;
+//}
 .prepare-fixed .shop-count{
     position: absolute;
     background: #c81623;
