--- a/src/less/res.less
+++ b/src/less/res.less
@@ -660,7 +660,7 @@
     border-radius: 3px;
     overflow-y: auto;
     right: 9px;
-    cursor: none;
+    cursor:default;
 }
 @media screen and (max-width: 1400px) { /*当屏幕尺寸小于1400px时，应用下面的CSS样式*/
      .prepare-fixed{
