fix prepare css

--- a/src/coms/prepare/views/prepare.html
+++ b/src/coms/prepare/views/prepare.html
@@ -79,7 +79,7 @@
 <!-- 调整资源 到备课夹-->
 <script type="text/ng-template" id="move-prepare.html">
 <div class="modal-body">
-		<div class="modal-prepare-header">{{}}</div>
+		<div class="modal-prepare-header">{{optypeText}}</div>
 		<div class="select-prepare-content">
 			<div class="select-inner-content">
 				<div class="modal-catogry">
