--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -13,6 +13,7 @@
 							<a href="#self-avatar" aria-controls="self-avatar" role="tab" data-toggle="tab" ng-click="isLocal=false">自定义头像</a>
 						</li>
 					</ul>
+					<div class="modal-remove modal-remove-setting" ng-click="cancel()"><i class="icon-remove"></i></div>
 	            </div>
 	            <div class="tab-content avatar-tab-content">
 	            	<div role="tabpanel" class="tab-pane active" id="system-avatar">
@@ -23,7 +24,7 @@
 	            		</ul>
 	            		<div class="button-group">
 		            		<button class="btn-general" ng-click="setAvatar()">确定</button>
-		    				<button class="btn-general" ng-click="close()">取消</button>
+		    				<button class="btn-general" ng-click="cancel()">取消</button>
 		            	</div>
 	            	</div>
 	            	<div role="tabpanel" class="tab-pane" id="self-avatar">
