--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -190,6 +190,10 @@
 .modal-remove i:hover{
     color: #666;
 }
+.modal-remove-setting{
+   padding: 2px 6px;
+   border-radius: 0;
+}
 // 修正资源
 .edit-res-trigger{
     line-height: 30px !important;
