fix more prepare

--- a/src/coms/layout/views/prepare/prepare-add.html
+++ b/src/coms/layout/views/prepare/prepare-add.html
@@ -17,7 +17,7 @@
 <!-- 选择加入 备课夹-->
 <script type="text/ng-template" id="select-prepare.html">
 	<div class="modal-body">
-		<div class="modal-prepare-header">备课夹</div>
+		<div class="modal-prepare-header">{{optypeText}}</div>
 		<div class="select-prepare-content">
 			<div class="select-inner-content">
 				<div class="modal-catogry">
