--- a/src/less/prepare.less
+++ b/src/less/prepare.less
@@ -573,6 +573,6 @@
     padding-left: 0;
     width: 420px;
 }
-.modal-new-prepare .tree-embed{
+.modal-new-prepare .tree-embed, .prepare-select-modal .tree-embed{
     width: 360px;
 }
