--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -22,7 +22,8 @@
         border: none;
         margin: 0 auto;
         position: relative;
-
+        padding-top: 15px;
+        
         .edit-avatar-icon {
             position: absolute;
             bottom: -5px;
