--- a/src/less/header.less
+++ b/src/less/header.less
@@ -66,6 +66,16 @@
     text-align: center;
     cursor: pointer;
 }
+
+@media screen and (max-width: 1200px) { /*当屏幕尺寸小于1050px时，应用下面的CSS样式*/
+     #header .main-nav li{
+        margin: 0 3px;
+    }
+}
+
+#header .main-nav li.nav-width-custom{
+    min-width: 50px;
+}
 #header .main-nav li:first-child{
     margin-left: 0;
 }
