--- a/src/coms/settings/views/settings.html
+++ b/src/coms/settings/views/settings.html
@@ -130,6 +130,7 @@
 		    				<ul class="user-subject">
 		    					<li ng-class="{active: subject.active}" ng-repeat="subject in subjects track by $index" ng-bind="subject.name" ng-click="selectSubject($index)"></li>
 		    				</ul>
+		    				<div class="clearfix"></div>
 		    			</div>
 		    		</div>
 		    		<div class="clear-float"></div>
