--- a/src/less/personal-center.less
+++ b/src/less/personal-center.less
@@ -577,3 +577,20 @@
 #personal-center-container .type-select-box .menu-drop .trigger i{
     float: right;
 }
+.no-prepare-statistic{
+    width: 450px;
+    margin: 100px auto;
+    position: relative;
+    text-indent: 2em;
+    font-size: 13px;
+    line-height: 30px;
+    color: #666;
+}
+.no-prepare-statistic i{
+    font-size: 60px;
+    font-weight: lighter;
+    color: #3fbbcf;
+    position: absolute;
+    left: -120px;
+    top: -12px;
+}
