fix ie9 background

--- a/src/less/upload-modal.less
+++ b/src/less/upload-modal.less
@@ -12,7 +12,7 @@
     height: 650px;
 }
 .upload-file-content, .upload-network-content{
-    background: #fff;
+    background-color: #fff;
     padding: 30px;
     padding-bottom: 0;
     border: 2px #41C9A9 solid;
