--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -270,15 +270,13 @@
 }
 
 /*固定到底部*/
-#preview-container .bottom-fixed
-{
+#preview-container .bottom-fixed{
     height: 80px;
     background: rgba(10,10,10,0.7);
     position: fixed;
     width: 100%;
     bottom: 0px;
     left: 0px;
-    
 }
 #preview-container .fix-inner
 {
