--- a/src/less/respreview.less
+++ b/src/less/respreview.less
@@ -270,7 +270,7 @@
 }
 
 /*固定到底部*/
-#preview-container .bottom-fixed{
+.bottom-fixed{
     height: 80px;
     background: rgba(10,10,10,0.7);
     position: fixed;
